[package]
name = "simpleai_base"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simpleai_base"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module"]

[dependencies]
#pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
serde = "1.0.196"
serde_derive = "1.0.125"
serde_json = "1.0"
base64 = "0.21"
zeroize = "1"
reqwest = { version = "0.12.0", default-features = false, features = ["http2", "charset", "json", "rustls-tls", "rustls-tls-native-roots"] }
url = "2.2.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
rathole = "0.5.0"
atty = "0.2"
thiserror = "1.0.59"
pkcs8 = { version = "0.10", features = ["encryption", "pkcs5", "pem", "alloc", "std"] }
ed25519-dalek = "2.1.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
sha2 = "0.10.8"
base58 = "0.2.0"
ripemd = "0.1.3"
instant = "0.1.12"
rand = { version = "0.8.5", features = ["small_rng"] }
hkdf = "0.12.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

libp2p = { version = "0.53.2", features = ["identify"] }
