[package]
name = "simpleai_base"
version = "0.3.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simpleai_base"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module"]

[dependencies]
tokenlib = { path = "tokenlib" }
