[package]
name = "simpleai_base"
version = "0.3.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simpleai_base"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
sysinfo = "0.30"
directories-next = "2.0.0"
once_cell = "1.20"
zeroize = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "json", "rustls-tls", "rustls-tls-native-roots", "blocking"] }
url = "2.2.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
atty = "0.2"
thiserror = "1.0"
pkcs8 = { version = "0.10", features = ["encryption", "pkcs5", "pem", "alloc", "std"] }
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
sha2 = "0.10.8"
base58 = "0.2.0"
ripemd = "0.1.3"
instant = "0.1.12"
rand = { version = "0.8.5", features = ["small_rng"] }
hkdf = "0.12.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = "0.34"
qrcode = "0.14"
regex = "1.11"
chrono = "0.4"
warp = "0.3"
if-addrs = "0.13"
futures = "0.3"
futures-timer = "3"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
libp2p = { version = "0.55.0", features = ["gossipsub", "request-response", "dcutr", "mdns", "autonat", "dns", "tokio", "noise", "tcp", "yamux", "identify", "kad", "ping", "relay", "metrics", "rsa", "macros", "quic", "websocket", "upnp", "rendezvous"] }
prometheus-client = "0.22.1"
toml = "0.8.10"
async-trait = "0.1"
unsigned-varint = { version = "0.7", features = [
    "futures",
    "asynchronous_codec",
] }
bytes = "1.5"
serde_cbor = "0.11"